# SOAD

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  assimilate_unknown_background.py  assimilate_various_obs_dist.py  assimilate_various_obs_freq.py  pyproject.toml
configs/: train.yaml
configs/assimilation/: assimilate.yaml  sda.yaml  soad-arctan3x.yaml  soad-full.yaml  soad-vor2vel.yaml
configs/callbacks/: default.yaml  free_generation.yaml  model_checkpoint.yaml
configs/data/: qg.yaml
configs/experiment/: default.yaml  sda_baseline.yaml  soad_arctan.yaml  soad_sin3x.yaml  soad_vor2vel.yaml
configs/logger/: many_loggers.yaml  mlflow.yaml
configs/model/: sda_baseline.yaml  soad.yaml
configs/model/opH/: arctan.yaml  sin3x.yaml  vor2vel.yaml
configs/trainer/: ddp.yaml
notebooks/: pdf_for_various_dist.ipynb  plot_various_obs_dist.ipynb  plot_various_obs_dist_no_back.ipynb  plot_various_obs_freq.ipynb  plot_various_obs_freq_no_back.ipynb  plot_various_obs_freq_no_fdc.ipynb
src/: train.py
src/assimilation/: assimilate_various_obs_dist.py  assimilate_various_obs_dist_no_back.py  assimilate_various_obs_freq.py  assimilate_various_obs_freq_no_back.py  assimilate_various_obs_freq_no_fdc.py  assimilator.py  test_configs.py
src/callbacks/: free_generation.py
src/data/: README.md  convert_ffcv.py  generate.py  qg_datamodule.py
src/diffusion/scheduler/: __init__.py  vpsde.py
src/models/: sda_baseline.py  soad.py
src/models/components/time_embedding/: __init__.py  sda_mlp.py  time_embedding.py
src/models/components/unet/: __init__.py  seq2d.py  unet_sda_seq2d.py
src/models/soad/: soad_all_obs.py  soad_arctan.py  soad_sin3x.py  soad_vor2vel.py
src/observations/: __init__.py  arctan.py  aug_observation.py  observation.py  sinusoidal.py  vor2vel.py
src/utils/: instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
